fix(checkout): Race Condition products checkout
